2001-04-27  Darin Adler  <darin@eazel.com>

	Fixed bug 7818 (Duplicating a link to a file on a different
	partition gives "You can't copy a file over itself" error).

	* libnautilus-extensions/nautilus-file-operations.c:
	(nautilus_file_operations_copy_move): There was a bug in the call
	to check_same_fs in here (it was passing in the target URI, which
	is often a file that doesn't even exist), so I removed that check.
	Did some other cleanups too.

2001-04-27  John Sullivan  <sullivan@eazel.com>

	Fixed bug 3214 (Confusing how to make bookmark changes "stick")
	Fixed bug 6277 (Bookmarks window should close with Escape key)

	* src/nautilus-bookmarks-window.c: (create_bookmarks_window):
	Made bookmarks window a GnomeDialog, giving it the single
	button "Done".

2001-04-27  Andy Hertzfeld  andy@eazel.com>

	added preferences for the maximum numder of items per site and
	the update interval.  It's not quite finished, as the news
	view isn't watching the update interval preference yet.
	
	* components/news/nautilus-news.c: (do_destroy), (draw_rss_items),
	(nautilus_news_make_new_channel), (max_items_changed),
	(make_news_view):
	use the preference for max items and update interval
	
	* libnautilus-extensions/nautilus-global-preferences.c:
	define defaults for news panel preferences
	
	* libnautilus-extensions/nautilus-global-preferences.h:
	define news panel preferences
	
	* src/nautilus-preferences-dialog.c:
	add a news panel pane to the preferences dialog
	
2001-04-26  Andy Hertzfeld  <andy@eazel.com>

	changed the news panel not to display any sites by default, since
	it's obnoxious to be doing periodic I/O to sites that weren't explicitly
	enabled.  Added an instructive message about the news panel that is
	displayed when no sites are enabled.
	
	Also, made it immediately test new rss urls when they are input, and
	display an error dialog instead of adding them if they fail.
	
	Also, make it always display the main news display (not configuration